# kafkatesting

./: .flake8  .pylintrc  Pipfile  README.md  docker-compose.2.4.1.yml  docker-compose.yml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
asyncio/: requirements.txt
scripts/: createEventHub.sh  eh-kafka.bicep
src/: asyncio.py  config.py  consumer.py  producer.py
src/consumer/: __main__.py
src/kafkatesting/: consumer.py  producer.py
src/producer/: __main__.py
