[metadata]
name = kafkatesting
author = Noel Bundick
author_email = noelbundick@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/noelbundick-msft/kafkatesting
project_urls =
    Bug Tracker = https://github.com/noelbundick-msft/kafkatesting
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    confluent-kafka
    python-dotenv
    fastapi
    uvicorn

[options.packages.find]
where = src

[options.extras_require]
dev =
    build
    pylint
    pytest

[options.entry_points]
console_scripts =
    consumer = kafkatesting.consumer:main
    producer = kafkatesting.producer:main
